--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
   text-align: center;
 }
 
@@ -7,3 +7,14 @@ img {
   display: block;
   margin: 50px auto;
 }
+
+$purple: #4100a7;
+$turquoise: #00c9b8;
+$yellow: #fcd200;
+$pink: #ffb3c1;
+$red: #fe5e54;
+$black: #141414;
+
+$small-pad: 10px;
+$medium-pad: 25px;
+$big-pad: 50px;
