--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 body {
   font-family: "Helvetica Neue", sans-serif;
   text-align: center;
@@ -7,14 +9,3 @@ img {
   display: block;
   margin: 50px auto;
 }
-
-$purple: #4100a7;
-$turquoise: #00c9b8;
-$yellow: #fcd200;
-$pink: #ffb3c1;
-$red: #fe5e54;
-$black: #141414;
-
-$small-pad: 10px;
-$medium-pad: 25px;
-$big-pad: 50px;
