--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,6 +2,9 @@
 @import "header";
 @import "footer";
 
+// font-family: 'Poppins', sans-serif;
+// font-family: 'Rancho', cursive;
+
 body {
   font-family: "Helvetica Neue", sans-serif;
   text-align: center;
