--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,6 @@
-@import "variables";
-@import "header";
-@import "footer";
+@import "components/settings";
+@import "components/header";
+@import "components/footer";
 
 body {
   font-family: "Helvetica Neue", sans-serif;
