--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url("/css/globals.css");
+@import url("/css/buttons.css");
 @import url("/css/footer.css");
 @import url("/css/header.css");
 
