--- a/main.css
+++ b/main.css
@@ -1,10 +1,7 @@
+/* Globals */
 @import url("/css/globals.css");
+
+/* Customs */
 @import url("/css/buttons.css");
 @import url("/css/footer.css");
 @import url("/css/header.css");
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
