--- a/css/globals.css
+++ b/css/globals.css
@@ -1,56 +1,60 @@
-:root{
---purple: #4100a7;
---turquoise: #00c9b8;
---yellow: #fcd200;
---pink: #ffb3c1;
---red: #fe5e54;
---black: #141414;
+:root {
+  --purple: #4100a7;
+  --turquoise: #00c9b8;
+  --yellow: #fcd200;
+  --pink: #ffb3c1;
+  --red: #fe5e54;
+  --black: #141414;
 
-/* Button */
---button-padding-vertical: 0.375rem;
---button-padding-horizontal: 1rem;
---button-margin-left: 15px;
---button-margin-top: 15px;
---button-margin-right: 15px;
---button-margin-bottom: 15px;
---button-bg: #0275d8;
---button-color: #fff;
---button-border-width: 1px;
---button-border-color: transparent;
---button-border-radius: 999999px;
---button-hover-bg: #0058a5;
---button-hover-color: #fff;
---button-hover-border-color: var(--button-border-color);
---button-active-bg: var(--button-hover-bg);
---button-active-color: var(--button-hover-color);
---button-disabled-opacity: 0.65;
---button-transition: background-color 0.15s ease, color 0.15s ease;
---button-cursor-pointer: pointer;
+  /* Button */
+  --button-padding-vertical: 0.375rem;
+  --button-padding-horizontal: 1rem;
+  --button-margin-left: 15px;
+  --button-margin-top: 15px;
+  --button-margin-right: 15px;
+  --button-margin-bottom: 15px;
+  --button-bg: var(--purple);
+  --button-color: #fff;
+  --button-border-width: 1px;
+  --button-border-color: transparent;
+  --button-border-radius: 999999px;
+  --button-hover-bg: #0058a5;
+  --button-hover-color: #fff;
+  --button-hover-border-color: var(--button-border-color);
+  --button-active-bg: var(--button-hover-bg);
+  --button-active-color: var(--button-hover-color);
+  --button-disabled-opacity: 0.65;
+  --button-transition: background-color 0.15s ease, color 0.15s ease;
+  --button-cursor-pointer: pointer;
 
-/* Search bar */
---input-height: 2.375rem;
---input-padding-vertical: 0.375rem;
---input-padding-horizontal: 0rem;
---input-bg: #fff;
---input-color: black;
---input-border-width: 1px;
---input-border-color: black;
---input-focus-border-color: blue;
---input-border-radius: 0px;
---input-transition: border-color 0.15s ease;
---input-disabled-bg: #eee;
---input-disabled-color: #555;
---input-disabled-border-color: #ccc;
---checkbox-border-radius: var(--input-border-radius);
---placeholder-color: grey;
+  /* Search bar */
+  --input-height: 2.375rem;
+  --input-padding-vertical: 0.375rem;
+  --input-padding-horizontal: 0rem;
+  --input-bg: #fff;
+  --input-color: black;
+  --input-border-width: 1px;
+  --input-border-color: black;
+  --input-focus-border-color: blue;
+  --input-border-radius: 0px;
+  --input-transition: border-color 0.15s ease;
+  --input-disabled-bg: #eee;
+  --input-disabled-color: #555;
+  --input-disabled-border-color: #ccc;
+  --checkbox-border-radius: var(--input-border-radius);
+  --placeholder-color: grey;
 }
 
 html {
-    box-sizing: border-box;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
