--- a/main.css
+++ b/main.css
@@ -5,3 +5,4 @@
 @import url("/css/buttons.css");
 @import url("/css/footer.css");
 @import url("/css/header.css");
+@import url("/css/products.css");
