changes to about

--- a/css/about.css
+++ b/css/about.css
@@ -1,66 +1,58 @@
+.about-grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  margin: 3rem 0;
+}
 
-#about_wrapper {
+.about-grid p {
+  text-align: left;
+  line-height: 1.5;
+}
 
-    background: white;
-    margin-top: 5vh;
+.about-grid h3 {
+  padding: 0 0 2rem 0;
+}
+
+.about-grid span {
+  font-weight: 700;
+}
+
+.about-h2 {
+  grid-column: 3/11;
+  grid-row: 1/2;
+  text-align: center;
+  font-weight: 400;
+  margin: 3rem 0 3rem;
+}
+
+#about_top {
+  grid-column: 3/11;
+  grid-row: 2/3;
+
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 2rem;
+  margin: 2rem 0 2rem;
+}
+
+#about_top img,
+#about_bottom img {
+  width: 100%;
+}
+
+#about_bottom {
+  grid-column: 3/11;
+  grid-row: 3/4;
+
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  grid-gap: 2rem;
+  margin: 2rem 0 3rem;
 }
 
 #about_wrapper h3 {
-    text-align: left;
-    font-size: 1.4rem;
-    font-family: sans-serif;
-    padding-bottom: 2vh;
+  text-align: left;
+  font-size: 1.4rem;
+  font-family: sans-serif;
+  padding-bottom: 2vh;
 }
-
-#about_wrapper span {
-        font-weight: bold;
-}
-
-#about_wrapper h2 {
-    text-align: left;
-    width: 40vw;
-    margin-left: 30vw;
-    margin-right: 30vw;
-    margin-bottom: 15vh;
-    margin-top: 10vh;
-    font-size: 1.6rem;
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: 500;
-}
-
-#about_wrapper p {
-    text-align: left;
-    font-family: sans-serif;
-    line-height: 1.5rem;
-    font-size: 1rem;
-}
-
-#about_top{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    width: 40vw;
-    margin-left: 30vw;
-    margin-right: 30vw;
-    gap: 2vw;
-}
-
-#about_top img{
-  width: 15vw;
-}
-
-
-#about_bottom{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    width: 40vw;
-    margin-left: 30vw;
-    margin-right: 30vw;
-    margin-top: 10vh;
-    margin-bottom: 18vh;
-    gap: 2vw;
-}
-
-#about_bottom img{
-    width: 11vw;
-  }
