--- a/css/globals.css
+++ b/css/globals.css
@@ -58,3 +58,9 @@ html {
 body {
   font-family: "Poppins", sans-serif;
 }
+
+main {
+  max-width: 1200px;
+  min-height: 300px;
+  margin: 0 auto;
+}
