--- a/css/buttons.css
+++ b/css/buttons.css
@@ -100,6 +100,7 @@ label {
   textarea:focus,
   select:focus{
     border-color: var(--input-focus-border-color);
+    border-bottom-width: 2px;
     outline: 0;
   }
 
