search request with js

--- a/css/search_home.css
+++ b/css/search_home.css
@@ -4,34 +4,51 @@
     margin: auto;
 }
 
+#search-container{
+    position: relative;
+}
+
 .search-bar{
     margin-top: 10%;
 }
 .search-tags{
 text-align: center;
 }
+.search-label{
+    position: absolute;
+    width: 100%;
+    padding: 15px;
+    background-color: white;
+    border: 2px solid var(--purple);
+    font-weight: 700;
+    color: var(--purple);
+}
 
-.search-tags button:nth-child(odd) {
+.hidden{
+    display: none;
+}
+
+#search-container button:nth-child(odd) {
     --button-bg: var(--purple);
 }
-.search-tags button:nth-child(even) {
+#search-container button:nth-child(even) {
     --button-bg: var(--turquoise);
 }
-.search-tags button:nth-child(3n) {
+#search-container button:nth-child(3n) {
     --button-bg: var(--red);
 }
-.search-tags button:nth-child(4n) {
+#search-container button:nth-child(4n) {
     --button-bg: var(--yellow);
 }
-.search-tags button:nth-child(5n) {
+#search-container button:nth-child(5n) {
     --button-bg: var(--turquoise);
     }
-.search-tags button:nth-child(6n) {
+#search-container button:nth-child(6n) {
     --button-bg: var(--red);
 }
-.search-tags button:nth-child(7n) {
+#search-container button:nth-child(7n) {
     --button-bg: var(--turquoise);
 }
-.search-tags button:nth-child(8n) {
+#search-container button:nth-child(8n) {
     --button-bg: var(--purple);
 }
