--- a/css/header.css
+++ b/css/header.css
@@ -98,22 +98,27 @@ nav ul li.icons p {
   text-align: center;
   font-family: "Poppins", sans-serif;
   font-weight: 300;
+  font-size: 1rem;
 }
 
-nav ul li.icons a.fa-user {
+nav ul li.icons a i.fa-user {
   color: var(--yellow);
 }
 
-nav ul li.icons a.fa-shopping-cart {
+nav ul li.icons a i.fa-shopping-cart {
   color: var(--purple);
 }
 
-nav ul li.icons a.fa-heart {
+nav ul li.icons a i.fa-heart {
   color: var(--pink);
 }
 
-nav ul li.icons a.fa-gift {
+nav ul li.icons a i.fa-gift {
   color: var(--turquoise);
+}
+
+nav ul li.icons a i.fa-info-cicle {
+  color: var(--black);
 }
 
 @media screen and (max-width: 767px) {
