--- a/css/products.css
+++ b/css/products.css
@@ -1,13 +1,17 @@
 #filters {
-  margin-top: 3rem;
+  margin: 3rem 0 5rem;
   display: grid;
   grid-template-columns: 1fr 1fr 4fr;
   align-items: start;
+
+  position: relative;
 }
 
 .dropdown-age,
 .dropdown-sorting {
-  width: 150px;
+  width: 200px;
+  background-color: #fff;
+  z-index: 10;
 
   display: grid;
   grid-template-columns: 1fr 2rem;
@@ -15,11 +19,20 @@
   align-items: center;
   border: 1px solid black;
   cursor: pointer;
+  position: absolute;
+}
+
+.dropdown-age {
+  grid-column: 1/2;
 }
 
 .dropdown-sorting {
-  width: 200px;
   justify-self: end;
+  grid-column: 3/4;
+}
+
+.range-slider-container {
+  grid-column: 2/3;
 }
 
 .sort {
@@ -215,4 +228,56 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-text-fill-color: unset; /* Will override color (regardless of order) */
   -webkit-text-stroke-width: unset;
   -webkit-text-stroke-color: unset;
+}
+
+@media screen and (max-width: 1200px) {
+  main {
+    padding: 0 3%;
+  }
+
+  .product-wish {
+    right: 0.4rem;
+    top: 0.2rem;
+  }
+
+  #filters {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .products-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .products-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  #filters {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 3rem;
+  }
+
+  .dropdown-age {
+    grid-column: 1/2;
+  }
+
+  .dropdown-sorting {
+    grid-column: 2/3;
+  }
+
+  .range-slider-container {
+    grid-column: 1/3;
+    grid-row: 2/3;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .products-grid {
+    grid-template-columns: 1fr;
+  }
 }
