--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 @import url("/css/header.css");
 @import url("/css/about.css");
 @import url("/css/products.css");
-
+@import url("/css/wishlist.css");
 
 * {
   padding: 0;
