--- a/css/products1.css
+++ b/css/products1.css
@@ -5,10 +5,6 @@ main#products {
     /* background-color: aliceblue; */
   }
   
-
-
- 
-  
   .show {
     display: flex !important;
   }
@@ -19,14 +15,14 @@ main#products {
 
   
   .product-grid {
-    margin-top: 7rem;
+    margin-top: 3rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 5fr 1fr;
-    grid-template-rows: auto;
     gap:1rem;
+    margin-bottom: 30%;
   }
 
-
+ 
   
   .product {
     /* border: 2px solid black; */
@@ -34,13 +30,13 @@ main#products {
     font-weight: 200;
     text-align: center;
     cursor: pointer;
-    transition: 0.1s;
+    transition: 0.5s;
   
     position: relative;
   }
   
   .product:hover {
-    transform: scale(1.01);
+    transform: scale(1.1);
   }
   
   .product img {
@@ -72,7 +68,7 @@ main#products {
 
   .product-info-container{
       display: grid;
-      grid-template-rows: 1fr 5fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 2fr 1fr
   }
 
   .product-info-tittle{
@@ -99,22 +95,35 @@ main#products {
 }
 
 
-.product-info-quantity{
+/* .product-info-quantity{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
 
-}
+} */
 
 .product-info-quantity div{
-    text-align: center;
+    text-align: left;
+    margin: auto;
+    font-weight: bold;
+}
+
+.input-group{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 70%
+}
+
+#myNumber{
+  text-align: center;
 }
 
 
 
-.dropdown-age {
+.quantity-container{
     width: 150px;
     display: grid;
-    grid-template-columns: 1fr 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     align-items: center;
     border: 1px solid black;
@@ -130,15 +139,20 @@ main#products {
     padding: 0.5rem 0.5rem;
   }
   
-  .dropdown-age > div,
-  form {
-    padding: 0.5rem 0.3rem;
-  }
 
+
+  .form-age-checkboxes {
+    display: flex;
+    flex-direction: column;
+    display: none;
+    grid-column: 1/3;
+  }
+  
   
   .product-button-add button{
     margin-top: 1rem;
-    width: 80%
+    height: 45px;
+    width: 100%
   }
 
 
