--- a/main.css
+++ b/main.css
@@ -7,7 +7,8 @@
 @import url("/css/header.css");
 @import url("/css/about.css");
 @import url("/css/products.css");
-
+@import url("/css/products1.css");
+@import url("/css/login.css");
 
 * {
   padding: 0;
