--- a/css/product1.css
+++ b/css/product1.css
@@ -1,4 +1,4 @@
-main#products {
+main#product1s {
     max-width: 1200px;
     min-height: 300px;
     margin: 0 auto;
@@ -14,7 +14,7 @@ main#products {
   
 
   
-  .product-grid {
+  .product1-grid {
     margin-top: 3rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 5fr 1fr;
@@ -24,7 +24,7 @@ main#products {
 
  
   
-  .product {
+  .product1 {
     /* border: 2px solid black; */
     width: 100%;
     font-weight: 200;
@@ -35,23 +35,23 @@ main#products {
     position: relative;
   }
   
-  .product:hover {
+  .product1:hover {
     transform: scale(1.1);
   }
   
-  .product img {
+  .product1 img {
     width: 550px;
     height: 400px;
     object-fit: cover;
   }
   
-  .product-name,
-  .product-price {
+  .product1-name,
+  .product1-price {
     font-size: 1.2rem;
     padding: 0.5rem;
   }
   
-  .product-wish {
+  .product1-wish {
     position: absolute;
     right: -1rem;
     top: -1rem;
@@ -61,48 +61,48 @@ main#products {
     transition: 0.1s;
   }
   
-  .product-wish:hover {
+  .product1-wish:hover {
     color: var(--pink);
   }
   
 
-  .product-info-container{
+  .product1-info-container{
       display: grid;
       grid-template-rows: 1fr 2fr 1fr
   }
 
-  .product-info-tittle{
+  .product1-info-tittle{
       text-align: center;
   }
 
 
 
 
-.product-info-review{
+.product1-info-review{
     display:grid;
     grid-template-columns: 2.5fr 3fr 1fr;
     align-items: center;
 }
 
-.product-star i {
+.product1-star i {
     color: #ffb3c1;
     font-size: 24px;
     
 }
 
-.product-info-review span {
+.product1-info-review span {
     font-weight: bold;
 }
 
 
-/* .product-info-quantity{
+/* .product1-info-quantity{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
 
 } */
 
-.product-info-quantity div{
+.product1-info-quantity div{
     text-align: left;
     margin: auto;
     font-weight: bold;
@@ -149,11 +149,47 @@ main#products {
   }
   
   
-  .product-button-add button{
+  .product1-button-add button{
     margin-top: 1rem;
     height: 45px;
     width: 100%
   }
 
 
+   @media screen and (max-width: 900px) {
+    .products-grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  /*
+  @media screen and (max-width: 650px) {
+    .product1s-grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  
+    #filters {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      row-gap: 3rem;
+    }
+  
+    .dropdown-age {
+      grid-column: 1/2;
+    }
+  
+    .dropdown-sorting {
+      grid-column: 2/3;
+    }
+  
+    .range-slider-container {
+      grid-column: 1/3;
+      grid-row: 2/3;
+    }
+  }
+  
+  @media screen and (max-width: 500px) {
+    .product1s-grid {
+      grid-template-columns: 1fr;
+    }
+  } */
   
