--- a/css/product1.css
+++ b/css/product1.css
@@ -22,6 +22,12 @@ main#product1s {
     margin-bottom: 30%;
   }
 
+  .hearted1 {
+    color: var(--pink);
+    -webkit-text-fill-color: unset; /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: unset;
+    -webkit-text-stroke-color: unset;
+  }
  
   
   .product1 {
@@ -65,6 +71,12 @@ main#product1s {
     color: var(--pink);
   }
   
+  .hearted1{
+    color: var(--pink);
+    -webkit-text-fill-color: unset; /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: unset;
+    -webkit-text-stroke-color: unset;
+  }
 
   .product1-info-container{
       display: grid;
@@ -74,9 +86,6 @@ main#product1s {
   .product1-info-tittle{
       text-align: center;
   }
-
-
-
 
 .product1-info-review{
     display:grid;
@@ -157,39 +166,47 @@ main#product1s {
 
 
    @media screen and (max-width: 900px) {
-    .products-grid {
+    .product1-grid {
       grid-template-columns: repeat(2, 1fr);
     }
+
+    .product1 img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+    }
+    .footer{
+      display: none;
+    }
   }
-  /*
+  
   @media screen and (max-width: 650px) {
-    .product1s-grid {
+    .product1-grid {
       grid-template-columns: repeat(2, 1fr);
+    } 
+    .product1 img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
     }
-  
-    #filters {
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      row-gap: 3rem;
+    .footer{
+      display: none;
     }
-  
-    .dropdown-age {
-      grid-column: 1/2;
-    }
-  
-    .dropdown-sorting {
-      grid-column: 2/3;
-    }
-  
-    .range-slider-container {
-      grid-column: 1/3;
-      grid-row: 2/3;
-    }
+    
   }
+  
+    
+
   
   @media screen and (max-width: 500px) {
-    .product1s-grid {
+    .product1-grid {
       grid-template-columns: 1fr;
     }
-  } */
+    .product1 img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+    }
+  }
+  
   
