cart page desktop and mobile added.

--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@
 
 @import url("/css/product1.css");
 @import url("/css/login.css");
+@import url("/css/cart.css");
 @import url("/css/wishlist.css");
 
 * {
