--- a/css/cart.css
+++ b/css/cart.css
@@ -140,6 +140,9 @@
 .basket-item a{
     color: inherit;
 }
+#total-container{
+    font-weight: bold;
+}
 
 
 @media screen and (max-width: 1100px) {
