--- a/css/search_home.css
+++ b/css/search_home.css
@@ -1,84 +1,102 @@
-#content{
-    width: 100%;
-    max-width: 1024px;
-    margin: auto;
+#content {
+  width: 100%;
+  max-width: 1024px;
+  margin: auto;
 }
 
-.full-height{
-    position: absolute;
-    top: 0;
-    height: 100vh;
-    max-width: 1024px;
-    margin: auto;
-    display: grid;
-    align-content: center;
+.full-height {
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  max-width: 1024px;
+  margin: auto;
+  display: grid;
+  align-content: center;
 }
 
-#search-container{
-    position: relative;
+#search-container {
+  position: relative;
 }
-#search-container form{
-    font-size: 1.3rem;
-    font-weight: 300;
+#search-container form {
+  font-size: 1.3rem;
+  font-weight: 300;
 }
-#search-container i{
-    position: absolute;
-    font-size: 1.6rem;
-    right: 5px;
-    top: 10px;
-    color: var(--purple);
-    cursor: pointer;
-    transition: all ease-in-out 0.2s;
+#search-container i {
+  position: absolute;
+  font-size: 1.6rem;
+  right: 5px;
+  top: 10px;
+  color: var(--purple);
+  cursor: pointer;
+  transition: all ease-in-out 0.2s;
 }
-#search-container i:hover{
-    color: var(--turquoise);
-    transform: scale(1.2);
-}
-
-
-.search-tags{
-text-align: center;
-}
-.search-label{
-    position: absolute;
-    width: 100%;
-    padding: 15px;
-    background-color: white;
-    border: 2px solid var(--purple);
-    font-weight: 700;
-    color: var(--purple);
+#search-container i:hover {
+  color: var(--turquoise);
+  transform: scale(1.2);
 }
 
-#search-input-tags{
-    position: absolute;
-    top: -15px;
+.search-tags {
+  text-align: center;
+}
+.search-label {
+  position: absolute;
+  width: 100%;
+  padding: 15px;
+  background-color: white;
+  border: 2px solid var(--purple);
+  font-weight: 700;
+  color: var(--purple);
 }
 
-.hidden{
-    display: none;
+#search-input-tags {
+  position: absolute;
+  top: -15px;
+}
+
+.hidden {
+  display: none;
 }
 
 #search-container button:nth-child(odd) {
-    --button-bg: var(--purple);
+  --button-bg: var(--purple);
 }
 #search-container button:nth-child(even) {
-    --button-bg: var(--turquoise);
+  --button-bg: var(--turquoise);
 }
 #search-container button:nth-child(3n) {
-    --button-bg: var(--red);
+  --button-bg: var(--red);
 }
 #search-container button:nth-child(4n) {
-    --button-bg: var(--yellow);
+  --button-bg: var(--yellow);
 }
 #search-container button:nth-child(5n) {
-    --button-bg: var(--turquoise);
-    }
+  --button-bg: var(--turquoise);
+}
 #search-container button:nth-child(6n) {
-    --button-bg: var(--red);
+  --button-bg: var(--red);
 }
 #search-container button:nth-child(7n) {
-    --button-bg: var(--turquoise);
+  --button-bg: var(--turquoise);
 }
 #search-container button:nth-child(8n) {
-    --button-bg: var(--purple);
+  --button-bg: var(--purple);
+}
+
+.slogan {
+  max-width: 700px;
+  margin: 0px auto 100px;
+  text-align: center;
+}
+
+.slogan h2 {
+  font-weight: 200;
+}
+
+.slogan h1 {
+  font-family: "Rancho", cursive;
+  font-size: 5rem;
+}
+
+.slogan h2 span {
+  font-weight: 700;
 }
