--- a/css/globals.css
+++ b/css/globals.css
@@ -57,11 +57,19 @@ html {
 
 body {
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-weight: 200;
 }
 
 main {
   max-width: 1200px;
   min-height: 300px;
   margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+button {
+  font-weight: 500 !important;
 }
