--- a/css/buttons.css
+++ b/css/buttons.css
@@ -32,6 +32,7 @@ button{
     border-radius: var(--button-border-radius);
     background-color: var(--button-bg);
     color: var(--button-color);
+    font-weight: 500;
 }
 
 button:hover, button:focus{
