working on rolling letters

--- a/main.css
+++ b/main.css
@@ -12,6 +12,8 @@
 @import url("/css/login.css");
 @import url("/css/cart.css");
 @import url("/css/wishlist.css");
+@import url("/css/rollingLetters.css");
+
 
 * {
   padding: 0;
