rolling letters test

--- a/css/rollingLetters.css
+++ b/css/rollingLetters.css
@@ -4,7 +4,6 @@
   .word {
     position:absolute;
     font-size: 24px;
-    
     width: 290px;
     opacity: 0;
   }
@@ -13,6 +12,7 @@
     display: inline-block;
     position: relative;
     float: left;
+    left: 15px;;
     transform: translateZ(25px);
     transform-origin: 50% 50% 25px;
   }
@@ -51,3 +51,9 @@
     color: purple;
   }
   
+/* 
+  <span class="word wisteria">special</span>
+  <span class="word belize">unique</span>
+  <span class="word pomegranate">original</span>
+  <span class="word green">lovely</span>
+  <span class="word midnight">extraordinary</span> */
