font weight variables

--- a/css/about.css
+++ b/css/about.css
@@ -14,14 +14,14 @@
 }
 
 .about-grid span {
-  font-weight: 700;
+  font-weight: var(--main-font-weight-bold);
 }
 
 .about-h2 {
   grid-column: 3/11;
   grid-row: 1/2;
   text-align: center;
-  font-weight: 400;
+  font-weight: var(--main-font-weight);
   margin: 3rem 0 3rem;
 }
 
