--- a/css/buttons.css
+++ b/css/buttons.css
@@ -32,8 +32,8 @@ button{
     border-radius: var(--button-border-radius);
     background-color: var(--button-bg);
     color: var(--button-color);
-    font-weight: 500;
-}
+    font-weight: var(--main-font-weight-bold);
+  }
 
 button:hover, button:focus{
     outline: 0;
