--- a/css/cart.css
+++ b/css/cart.css
@@ -21,7 +21,7 @@
   background-color: #fbfbfb;
   align-items: center;
   justify-items: center;
-  font-weight: 500;
+  font-weight: var(--main-font-weight-bold);
   font-size: 16px;
 }
 
@@ -139,7 +139,7 @@
   color: inherit;
 }
 #total-container {
-  font-weight: 500;
+  font-weight: var(--main-font-weight-bold);
 }
 
 @media screen and (max-width: 1100px) {
