--- a/css/header.css
+++ b/css/header.css
@@ -98,7 +98,7 @@ nav ul li.icons a {
 
 nav ul li.icons p {
   text-align: center;
-  font-weight: 500;
+  font-weight: var(--main-font-weight-bold);
   font-size: 1rem;
 }
 
