--- a/css/product1.css
+++ b/css/product1.css
@@ -33,7 +33,7 @@ main#product1s {
   .product1 {
     /* border: 2px solid black; */
     width: 100%;
-    font-weight: 200;
+    font-weight: var(--main-font-weight);
     text-align: center;
     cursor: pointer;
     transition: 0.5s;
