--- a/css/wishlist.css
+++ b/css/wishlist.css
@@ -27,7 +27,7 @@
   .wishlist-product {
     /* border: 2px solid black; */
     width: 100%;
-    font-weight: 200;
+    font-weight: var(--main-font-weight);
     text-align: center;
     cursor: pointer;
     transition: 0.1s;
@@ -47,7 +47,7 @@
 
   #wishlist-products h2 {
       font-size: 2.3rem;
-      font-weight: 400;
+      font-weight: var(--main-font-weight);
       margin-top: 7vh;
   }
 
