--- a/css/rollingLetters.css
+++ b/css/rollingLetters.css
@@ -8,8 +8,7 @@
     font-size: 28px;
     width: 290px;
     opacity: 0;
-    top: 39.8%;
-    
+    top: 373px;   
     justify-self: center;
 
   }
@@ -54,6 +53,230 @@
   .midnight {
     color: purple;
   }
+
+  @media screen and (max-width: 1920px) and (max-height: 937px) {
+    .word {
+      text-align: center;
+      position: absolute;
+      font-size: 28px;
+      top: 372px;
+      justify-self: center;
+  }
+  }
+  
+
+  /* @media screen and (min-width: 1920px) and (max-height: 1920px) {
+    .word {
+      text-align: center;
+      position: absolute;
+      font-size: 28px;
+      top: 446px;
+      justify-self: center;
+  }
+  } */
+
+  @media screen and (min-width: 993px) and (max-width: 1919px) {
+    .word {
+      text-align: center;
+      position: absolute;
+      font-size: 28px;
+      top: 366px;
+      justify-self: center;
+  }
+  }
+  
+  @media screen and (max-width: 992px){ 
+    .word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 368px;
+    justify-self: center;
+    }
+  }
+
+  @media screen and (max-width: 915px){ 
+    .word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 345px;
+    justify-self: center;
+    }
+  }
+
+  @media screen and (max-width: 583px){ 
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 320px;
+    justify-self: center;
+    }}
+
+    @media screen and (max-width: 520px){
+    .word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 333px;
+    justify-self: center;
+}}
+
+@media screen and (max-width: 464px){
+    .word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 245px;
+    justify-self: center;
+}}
+
+@media screen and (max-width: 364px){
+    .word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 352px;
+    justify-self: center;
+}}
+
+@media screen and (max-width: 335px){
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 327px;
+    justify-self: center;
+}}
+
+@media screen and (max-width: 328px){
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 298px;
+    justify-self: center;
+}}
+
+@media screen and (max-width: 294px){
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 284px;
+    justify-self: center;
+}}
+
+@media screen and (max-width: 262px){
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 299px;
+    justify-self: center;
+}}
+
+@media screen and (max-width: 250px){
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 273px;
+    justify-self: center;
+}}
+
+@media screen and (max-width: 243px){
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 246px;
+    justify-self: center;
+}}
+
+
+/* iphone X Mediaquerie */
+
+@media only screen 
+  and (max-width: 375px) 
+  and (max-height: 812px) 
+  and (-webkit-maxevice-pixel-ratio: 3) { 
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 245px;
+    justify-self: center;
+}}
+
+/* Iphone 6,7,8 Plus Mediaquerie */
+
+@media only screen 
+  and (max-device-width: 414px) 
+  and (max-device-height: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 207px;
+    justify-self: center;
+}}
+
+ /* Iphone 6,7,8 Mediaqueries */
+
+ @media only screen 
+  and (max-device-width: 375px) 
+  and (max-device-height: 667px)  { 
+    .word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 172px;
+    justify-self: center;
+}}
+
+
+/* Ipad mediaquerie */
+@media only screen 
+and (min-device-width: 768px) 
+and (max-device-height: 1024px)  { 
+  .word {
+  text-align: center;
+  position: absolute;
+  font-size: 28px;
+  top: 207px;
+  justify-self: center;
+}}
+
+/* iPad mediaquerie */
+/* @media only screen 
+  and (min-device-width: 768px) 
+  and (min-device-height: 1024px)
+  and (max-device-width: 769px) 
+  and (max-device-height: 1025px)  { 
+.word {
+    text-align: center;
+    position: absolute;
+    font-size: 28px;
+    top: 389px;
+    justify-self: center;
+}}
+
+@media only screen 
+  and (min-device-width: 1920px) 
+  and (min-device-height: 1080px)
+  and (max-device-width: 1920px) 
+  and (max-device-height: 1080px){
+    .word {
+      text-align: center;
+      position: absolute;
+      font-size: 28px;
+      top: 445px;
+      justify-self: center;
+  }
+  } */
   
 /* 
   <span class="word wisteria">special</span>
